# servicehub

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/api_v1/endpoints/: services.py
app/api/routes/: auth.py  service.py  user.py
app/core/: config.py  dependencies.py  security.py
app/crud/: service.py
app/db/: base.py  session.py
app/models/: service.py  user.py
app/schemas/: service.py  user.py
migrations/: env.py
migrations/versions/: 2ebb6182ae8f_create_service_table.py  30b801e82003_create_service_table.py  7f5865947e1c_create_users_table.py  8b604f4a5e28_update.py  9429e8c9a278_init.py  b07075d07953_create_service_table.py
