[tool.poetry]
name = "servicehub"
version = "0.1.0"
description = ""
authors = ["dietwice"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.11.4"}
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
alembic = "^1.15.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.4.0"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
